--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,8 @@
   "type": "project",
 
   "require": {
-    "mailgun/mailgun-php": "*"
+    "mailgun/mailgun-php": "^3.5",
+    "kriswallsmith/buzz": "^1.2",
+    "nyholm/psr7": "^1.5"
   }
 }
